--- a/Sudoku.html
+++ b/Sudoku.html
@@ -97,7 +97,7 @@ function loadValues(numberOfGame)
 			{
 				$(tempNameIAndJ).html('<input type="text" value="'+vGame[countOfValue]+'" disabled />');
 			}
-			countOfValue++;
+			countOfValues++;
 		}
 	}
 }
