Desarrollando sudoku generator

--- a/Sudoku.html
+++ b/Sudoku.html
@@ -15,47 +15,47 @@ var playedGames = [];
 function loadBrick()
 {
 	var especificBrick;
-	for(var i = 1; i <= 9; i++)
+	for(var i = 0; i <= 8; i++)
 	{
-		for(var j = 1; j <= 9; j++)
+		for(var j = 0; j <= 8; j++)
 		{
 			borderToAdd = "";
-			if(i == 1 && j == 1)
+			if(i == 0 && j == 0)
 			{
 				borderToAdd = 'border-left-color: black; border-top-color: black;';
 				especificBrick = '<div class="brick" id="brick'+i.toString()+'-'+j.toString()+'" style="left: '+posBrick_x+'px; top: '+posBrick_y+'px;visibility: visible;'+borderToAdd+'"></div>';
 			}
 			else
 			{
-				if(i == 1)
+				if(i == 0)
 				{
 					borderToAdd += 'border-top-color: black;';
 				}
-				if(i == 9)
+				if(i == 8)
 				{
 					borderToAdd += 'border-bottom-color: black;';
 				}
-				if(j == 1)
+				if(j == 0)
 				{
 					borderToAdd += 'border-left-color: black;';
 				}
-				if(j == 9)
+				if(j == 8)
+				{
+					borderToAdd += 'border-right-color: black;';
+				}
+				if(j == 2 || j == 5)
 				{
 					borderToAdd += 'border-right-color: black;';
 				}
 				if(j == 3 || j == 6)
 				{
-					borderToAdd += 'border-right-color: black;';
-				}
-				if(j == 4 || j == 7)
-				{
 					borderToAdd += 'border-left-color: black;';
 				}
-				if(i == 3 || i == 6)
+				if(i == 2 || i == 5)
 				{
 					borderToAdd += 'border-bottom-color: black;';
 				}
-				if(i == 4 || i == 7)
+				if(i == 3 || i == 6)
 				{
 					borderToAdd += 'border-top-color: black;';
 				}
@@ -95,32 +95,393 @@ function loadValues(numberOfGame)
 			tempNameIAndJ = '#brick'+i.toString()+'-'+j.toString();
 			if(vGame[countOfValue] != 0)
 			{
-				$(tempNameIAndJ).html('<input type="text" value="'+vGame[countOfValue]+'" disabled />');
+				$(tempNameIAndJ).html('<input class="valueOfBrick" type="text" value="'+vGame[countOfValue]+'" disabled style="background: #CCC;"/>');
 			}
-			countOfValues++;
+			else
+			{
+				$(tempNameIAndJ).html('<input class="valueOfBrick" type="text" value="" style="background: #BBB;" maxlength="1" onKeyDown="winControl"/>');
+				$(tempNameIAndJ).children('input').keyup(winControl);
+			}
+			countOfValue++;
 		}
 	}
+}
+function loadValues2()
+{
+	countOfValue = 0;
+	//var vGame = games[numberOfGame];
+	for(var i = 0 ; i <= 2; i++)
+	{
+		for(var j = 0; j <= 2; j++)
+		{
+			tempNameIAndJ = '#brick'+i.toString()+'-'+j.toString();
+			if(games[countOfValue] != 0)
+			{
+				$(tempNameIAndJ).html('<input class="valueOfBrick" type="text" value="'+games[countOfValue]+'" disabled style="background: #CCC;"/>');
+			}
+			else
+			{
+				$(tempNameIAndJ).html('<input class="valueOfBrick" type="text" value="" style="background: #BBB;" maxlength="1" onKeyDown="winControl"/>');
+				$(tempNameIAndJ).children('input').keyup(winControl);
+			}
+			countOfValue++;
+		}
+	}
+	/*
+	for(var i = 1; i <= 9; i++)
+	{
+		for(var j = 1; j <= 9; j++)
+		{
+			tempNameIAndJ = '#brick'+i.toString()+'-'+j.toString();
+			if(games[countOfValue] != 0)
+			{
+				$(tempNameIAndJ).html('<input class="valueOfBrick" type="text" value="'+games[countOfValue]+'" disabled style="background: #CCC;"/>');
+			}
+			else
+			{
+				$(tempNameIAndJ).html('<input class="valueOfBrick" type="text" value="" style="background: #BBB;" maxlength="1" onKeyDown="winControl"/>');
+				$(tempNameIAndJ).children('input').keyup(winControl);
+			}
+			countOfValue++;
+		}
+	}
+	*/
 }
 
 function loadGames()
 {
 	games[0] = [0,4,0,1,5,0,0,8,3,0,3,0,0,6,0,5,0,0,6,0,0,0,0,0,0,0,9,0,5,0,0,0,0,0,0,0,1,0,0,7,0,8,0,0,2,0,0,0,0,0,0,0,6,0,5,0,0,0,0,0,0,0,4,0,0,4,0,8,0,0,7,0,8,6,0,0,2,4,0,9,0];
 	solution[0] = [7,4,9,1,5,2,6,8,3,2,3,1,8,6,9,5,4,7,6,8,5,4,7,3,2,1,9,4,5,2,9,1,6,7,3,8,1,9,6,7,3,8,4,5,2,3,7,8,2,4,5,9,6,1,5,1,3,6,9,7,8,2,4,9,2,4,5,8,1,3,7,6,8,6,7,3,2,4,1,9,5];
+	games[1] = [9,0,0,4,0,0,5,0,2,0,0,1,0,2,0,9,0,0,0,7,0,0,0,0,8,0,0,3,0,0,0,7,0,0,5,0,0,0,7,0,8,0,3,0,0,0,2,0,0,6,0,0,0,1,0,0,6,0,0,0,0,4,0,0,0,4,0,3,0,1,0,0,2,0,8,0,0,1,0,0,7];
+	solution[1] = [9,8,3,4,1,7,5,6,2,6,4,1,8,2,5,9,7,3,5,7,2,6,9,3,8,1,4,3,6,9,1,7,2,4,5,8,4,1,7,5,8,9,3,2,6,8,2,5,3,6,4,7,9,1,1,3,6,7,5,8,2,4,9,7,9,4,2,3,6,1,8,5,2,5,8,9,4,1,6,3,7];
+	games[2] = [1,0,0,0,0,8,0,0,9,0,0,2,0,0,0,0,0,8,0,8,0,5,4,9,0,0,0,0,4,0,2,0,0,9,0,0,3,0,9,0,0,0,2,0,1,0,0,1,0,0,5,0,4,0,0,0,0,9,1,2,0,3,0,7,0,0,0,0,0,1,0,0,2,0,0,7,0,4,0,0,6];
+	solution[2] = [1,3,4,6,2,8,5,7,9,9,5,2,1,3,7,4,6,8,6,8,7,5,4,9,3,1,2,5,4,6,2,7,1,9,8,3,3,7,9,4,8,6,2,5,1,8,2,1,3,9,5,6,4,7,4,6,8,9,1,2,7,3,5,7,9,5,8,6,3,1,2,4,2,1,3,7,5,4,8,9,6];
+	games[3] = [];
+	solution[3] = [];
+	games[4] = [];
+	solution[4] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	games[1] = [];
+	solution[1] = [];
+	
+}
+
+function formatString(stringToFormat)
+{
+	vStringToFormat = stringToFormat.split('-');
+	for(var i = 0; i < 9; i++)
+	{
+	
+	}
+	for(var i = 1; i < vStringToFormat.length; i++)
+	{
+		games.push(vStringToFormat[i]);
+	}
+}
+
+var vFile = [];
+var vFileValue = [];
+var vColumn = [];
+var vColumnValue = [];
+
+function generateSudoku()
+{
+	
+	sudokuReady = 0;
+	/*
+	var vFile = [];
+	var vFileValue = [];
+	var vColumn = [];
+	var vColumnValue = [];
+	*/
+	var lastCameUp = [];
+	var vGrid = [];
+	sudokuString = "";
+	for(var i = 0; i <= 2; i++)
+	{
+		for(var j = 0; j <= 2; j++)
+		{
+			if($.inArray(i,vFile) == -1)
+			{
+				positionInArrayFile = i;
+				vFile.push(i);
+				vFileValue.push("0,0,0,0,0,0,0,0,0");
+			}
+			else
+			{
+				positionInArrayFile = $.inArray(i,vFile);
+			}
+			if($.inArray(j,vColumn) == -1)
+			{
+				positionInArrayColumn = j;
+				vColumn.push(j);
+				vColumnValue.push("0,0,0,0,0,0,0,0,0");
+			}
+			else
+			{
+				positionInArrayColumn = $.inArray(j,vColumn);
+			}
+			exitDo = 0;
+			do
+			{
+				randomNumber = (1 + Math.floor(Math.random() * 9));
+				if($.inArray(randomNumber, lastCameUp) == -1)
+				{
+					lastCameUp.push(randomNumber);
+					exitDo = 1;
+				}
+			} while (exitDo == 0);
+			
+			if(lastCameUp.length > 3)
+			{
+				lastCameUp.splice(0,1);
+			}
+			
+			if($.inArray(randomNumber,vGrid) == -1)
+			{
+				fileToDecode = vFileValue[positionInArrayFile];
+				columnToDecode = vColumnValue[positionInArrayColumn];
+				if((decodeFile(randomNumber,fileToDecode,positionInArrayFile) == true) && (decodeColumn(randomNumber, columnToDecode,positionInArrayColumn) == true))
+				{
+					vGrid.push(randomNumber);
+					sudokuString += randomNumber + '-';
+				}
+				else
+				{
+					if(j != 0)
+					{
+						j--;
+					}
+					else
+					{
+						i--;
+						break;
+					}
+				}
+			}
+			else
+			{
+				if(j != 0)
+				{
+					j--;
+				}
+				else
+				{
+					i--;
+					break;
+				}
+			}
+		}
+	}
+	
+	
+	formatString(sudokuString);
+}
+
+function decodeFile(number, file, posFileValue)
+{
+	var vFileTemp = file.split(',');
+	if($.inArray((number.toString()),vFileTemp) != -1)
+	{
+		return false;
+	}
+	else
+	{
+		positionToReplace = $.inArray("0",vFileTemp);
+		vFileTemp[positionToReplace] = number.toString();
+	}
+	stringToFileValue = "";
+	for(var i = 0; i <= 8; i++)
+	{
+		if(i == 0)
+		{
+			stringToFileValue = vFileTemp[i];
+		}
+		if(i != 0)
+		{
+			stringToFileValue += ','+vFileTemp[i];
+		}
+	}
+	vFileValue[posFileValue] = stringToFileValue;
+	return true;
+}
+
+function decodeColumn(number, column, posColumnValue)
+{
+	var vColumnTemp = column.split(',');
+	if($.inArray((number.toString()), vColumnTemp) != -1)
+	{
+		return false;
+	}
+	else
+	{
+		positionToReplace = $.inArray("0",vColumnTemp);
+		vColumnTemp[positionToReplace] = number.toString();
+	}
+	stringToColumnValue = "";
+	for(var i = 0; i <= 8; i++)
+	{
+		if(i == 0)
+		{
+			stringToColumnValue = vColumnTemp[i];
+		}
+		if(i != 0)
+		{
+			stringToColumnValue += ','+vColumnTemp[i];
+		}
+	}
+	vColumnValue[posColumnValue] = stringToColumnValue;
+	return true;
 }
 
 function newGame()
 {
+	generateSudoku();
 	posBrick_x = 0;
 	posBrick_y = 0;
+	selectedGame = 0;
 	loadBrick();
-	loadGames();
+	//loadGames();
 	//loadValues(getGame());
-	loadValues(0);
+	//loadValues(selectedGame);
+	loadValues2();
+}
+
+function winControl()
+{
+	countOfValue = 0;
+	solutionOfGame = solution[selectedGame];
+	win = 1;
+	for(var i = 1; i <= 9; i++)
+	{
+		for(var j = 1; j <= 9; j++)
+		{
+			tempNameIAndJ = '#brick'+i.toString()+'-'+j.toString();
+			valueOfBrick = parseInt($(tempNameIAndJ).children('input').val());
+			if(valueOfBrick != solutionOfGame[countOfValue])
+			{
+				win = 0;
+			}
+			countOfValue++;
+		}
+	}
+	if(win == 1)
+	{
+		playedGames.push(selectedGame);
+		winGame();
+	}
+}
+
+function winGame()
+{
+	for(var i = 1; i <= 9; i++)
+	{
+		for(var j = 1; j <= 9; j++)
+		{
+			tempNameIAndJ = '#brick'+i.toString()+'-'+j.toString();
+			$(tempNameIAndJ).children('input').prop('disabled',true);
+		}
+	}
 }
 
 $(document).ready(function (){
 
 	newGame();
+	var timer = $.timer(function (){
+		
+		//winControl();
+		
+	},20,true);
+	
 
 });
 </script>
