--- a/Sudoku.html
+++ b/Sudoku.html
@@ -75,7 +75,7 @@ function getGame()
 	exit = 0;
 	do
 	{
-		randomGame = (Math.floor(Math.random() * 3));
+		randomGame = (Math.floor(Math.random() * 6));
 		if($.inArray(randomGame,playedGames) == -1)
 		{
 			exit = 1;
@@ -115,15 +115,15 @@ function loadGames()
 	solution[1] = [9,8,3,4,1,7,5,6,2,6,4,1,8,2,5,9,7,3,5,7,2,6,9,3,8,1,4,3,6,9,1,7,2,4,5,8,4,1,7,5,8,9,3,2,6,8,2,5,3,6,4,7,9,1,1,3,6,7,5,8,2,4,9,7,9,4,2,3,6,1,8,5,2,5,8,9,4,1,6,3,7];
 	games[2] = [1,0,0,0,0,8,0,0,9,0,0,2,0,0,0,0,0,8,0,8,0,5,4,9,0,0,0,0,4,0,2,0,0,9,0,0,3,0,9,0,0,0,2,0,1,0,0,1,0,0,5,0,4,0,0,0,0,9,1,2,0,3,0,7,0,0,0,0,0,1,0,0,2,0,0,7,0,4,0,0,6];
 	solution[2] = [1,3,4,6,2,8,5,7,9,9,5,2,1,3,7,4,6,8,6,8,7,5,4,9,3,1,2,5,4,6,2,7,1,9,8,3,3,7,9,4,8,6,2,5,1,8,2,1,3,9,5,6,4,7,4,6,8,9,1,2,7,3,5,7,9,5,8,6,3,1,2,4,2,1,3,7,5,4,8,9,6];
-	/*
 	games[3] = [5,1,0,0,0,0,7,4,0,0,6,9,0,8,7,0,0,0,2,0,7,0,0,0,0,0,0,0,0,0,0,2,9,6,0,0,1,0,0,6,0,3,0,0,8,0,0,3,8,4,0,0,0,0,0,0,0,0,0,0,9,0,6,0,0,0,4,6,0,2,8,0,0,2,6,0,0,0,0,1,4];
 	solution[3] = [5,1,8,9,3,6,7,4,2,4,6,9,2,8,7,3,5,1,2,3,7,5,1,4,8,6,9,7,8,4,1,2,9,6,3,5,1,5,2,6,7,3,4,9,8,6,9,3,8,4,5,1,2,7,8,4,1,3,5,2,9,7,6,9,7,5,4,6,1,2,8,3,3,2,6,7,9,8,5,1,4];
-	games[4] = [];
-	solution[4] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
+	games[4] = [0,4,7,0,0,0,0,0,1,8,3,0,0,0,7,0,0,2,0,0,0,9,0,0,6,0,0,0,2,0,4,0,0,7,0,0,0,0,0,0,0,0,0,0,3,0,0,8,0,0,6,0,4,0,0,0,4,0,0,3,0,0,0,2,0,0,5,0,0,0,3,8,1,0,0,0,0,0,2,9,0];
+	solution[4] = [9,4,7,6,5,2,3,8,1,8,3,6,1,4,7,9,5,2,5,1,2,9,3,8,6,7,4,3,2,1,4,8,5,7,6,9,4,6,5,7,1,9,8,2,3,7,9,8,3,2,6,1,4,5,6,8,4,2,9,3,5,1,7,2,7,9,5,6,1,4,3,8,1,5,3,8,7,4,2,9,6];
+	games[5] = [0,1,7,9,5,0,0,0,0,0,0,5,0,0,1,0,3,0,3,0,0,0,0,0,8,0,0,0,6,0,0,1,0,0,9,4,0,0,0,6,0,2,0,0,7,9,2,0,0,7,0,0,5,0,0,0,6,0,0,0,0,0,3,0,3,0,5,0,0,9,0,0,0,0,0,0,3,6,4,7,0];
+	solution[5] = [8,1,7,9,5,3,6,4,2,6,4,5,8,2,1,7,3,9,3,9,2,7,6,4,8,1,5,7,6,8,3,1,5,2,9,4,1,5,4,6,9,2,3,8,7,9,2,3,4,7,8,1,5,6,4,7,6,1,8,9,5,2,3,2,3,1,5,4,7,9,6,8,5,8,9,2,3,6,4,7,1];
+	games[6] = [8,0,0,0,0,3,5,0,2,0,9,0,0,0,0,0,0,0,0,0,0,2,0,0,8,6,7,0,0,3,8,0,0,6,0,0,1,6,0,5,0,7,0,2,4,0,0,5,0,0,4,1,0,0,2,1,4,0,0,6,0,0,0,0,0,0,0,1,0,0,8,0,3,0,6,0,0,0,2,0,9];
+	solution[6] = [8,4,7,1,6,3,5,9,2,6,9,2,7,5,8,3,4,1,5,3,1,2,4,9,8,6,7,4,2,3,8,9,1,6,7,5,1,6,8,5,3,7,9,2,4,9,7,5,6,2,4,1,3,8,2,1,4,9,8,6,7,5,3,7,5,9,3,1,2,4,8,6,3,8,6,4,7,5,2,1,9];
+	/*
 	games[1] = [];
 	solution[1] = [];
 	games[1] = [];
