--- a/Sudoku.html
+++ b/Sudoku.html
@@ -4,6 +4,7 @@
 	<title>Sudoku</title>
 	<script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="jquery.timer.js" type="text/javascript"></script>
+	<script src="jquery.numeric.js" type="text/javascript"></script>
 	<link href="SudokuStyle.css" rel="stylesheet" type="text/css" />
 </head>
 <script>
@@ -75,7 +76,7 @@ function getGame()
 	exit = 0;
 	do
 	{
-		randomGame = (Math.floor(Math.random() * 6));
+		randomGame = (Math.floor(Math.random() * 20));
 		if($.inArray(randomGame,playedGames) == -1)
 		{
 			exit = 1;
@@ -99,7 +100,8 @@ function loadValues(numberOfGame)
 			}
 			else
 			{
-				$(tempNameIAndJ).html('<input class="valueOfBrick" type="text" value="" style="background: #BBB;" maxlength="1" onKeyDown="winControl"/>');
+				$(tempNameIAndJ).html('<input class="valueOfBrick" type="text" value="" style="background: #BBB;" maxlength="1"/>');
+				$(tempNameIAndJ).children('input').numeric({ decimal: false, negative: false });
 				$(tempNameIAndJ).children('input').keyup(winControl);
 			}
 			countOfValue++;
@@ -123,35 +125,35 @@ function loadGames()
 	solution[5] = [8,1,7,9,5,3,6,4,2,6,4,5,8,2,1,7,3,9,3,9,2,7,6,4,8,1,5,7,6,8,3,1,5,2,9,4,1,5,4,6,9,2,3,8,7,9,2,3,4,7,8,1,5,6,4,7,6,1,8,9,5,2,3,2,3,1,5,4,7,9,6,8,5,8,9,2,3,6,4,7,1];
 	games[6] = [8,0,0,0,0,3,5,0,2,0,9,0,0,0,0,0,0,0,0,0,0,2,0,0,8,6,7,0,0,3,8,0,0,6,0,0,1,6,0,5,0,7,0,2,4,0,0,5,0,0,4,1,0,0,2,1,4,0,0,6,0,0,0,0,0,0,0,1,0,0,8,0,3,0,6,0,0,0,2,0,9];
 	solution[6] = [8,4,7,1,6,3,5,9,2,6,9,2,7,5,8,3,4,1,5,3,1,2,4,9,8,6,7,4,2,3,8,9,1,6,7,5,1,6,8,5,3,7,9,2,4,9,7,5,6,2,4,1,3,8,2,1,4,9,8,6,7,5,3,7,5,9,3,1,2,4,8,6,3,8,6,4,7,5,2,1,9];
-	/*
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
-	games[1] = [];
-	solution[1] = [];
+	games[7] = [6,0,0,0,8,0,7,2,9,0,1,0,0,0,0,3,4,0,0,0,9,0,0,0,0,0,0,4,0,6,0,0,7,0,0,0,0,3,0,2,0,5,0,6,0,0,0,0,3,0,0,8,0,7,0,0,0,0,0,0,5,0,0,0,8,7,0,0,0,0,1,0,5,6,1,0,7,0,0,0,8];
+	solution[7] = [6,4,3,5,8,1,7,2,9,8,1,5,7,2,9,3,4,6,2,7,9,6,3,4,1,8,5,4,5,6,8,1,7,9,3,2,7,3,8,2,9,5,4,6,1,1,9,2,3,4,6,8,5,7,9,2,4,1,6,8,5,7,3,3,8,7,9,5,2,6,1,4,5,6,1,4,7,3,2,9,8];
+	games[8] = [7,0,0,0,0,0,0,0,0,8,0,2,9,3,0,0,0,0,3,0,6,0,0,4,9,0,0,0,0,4,6,0,0,8,5,0,0,0,0,4,0,7,0,0,0,0,1,7,0,0,8,6,0,0,0,0,8,7,0,0,2,0,9,0,0,0,0,6,9,4,0,5,0,0,0,0,0,0,0,0,8];
+	solution[8] = [7,9,1,2,8,6,5,4,3,8,4,2,9,3,5,7,1,6,3,5,6,1,7,4,9,8,2,9,3,4,6,1,2,8,5,7,6,8,5,4,9,7,3,2,1,2,1,7,3,5,8,6,9,4,5,6,8,7,4,1,2,3,9,1,2,3,8,6,9,4,7,5,4,7,9,5,2,3,1,6,8];
+	games[9] = [3,5,0,0,0,0,0,0,0,0,9,8,0,0,7,0,0,5,0,0,6,0,0,8,0,0,0,5,0,0,1,0,2,0,0,0,0,1,9,0,0,0,6,8,0,0,0,0,8,0,3,0,0,1,0,0,0,3,0,0,4,0,0,8,0,0,4,0,0,3,7,0,0,0,0,0,0,0,0,2,6];
+	solution[9] = [3,5,2,6,1,9,8,4,7,4,9,8,2,3,7,1,6,5,1,7,6,5,4,8,9,3,2,5,8,3,1,6,2,7,9,4,2,1,9,7,5,4,6,8,3,6,4,7,8,9,3,2,5,1,9,2,5,3,7,6,4,1,8,8,6,1,4,2,5,3,7,9,7,3,4,9,8,1,5,2,6];
+	games[10] = [0,6,0,0,3,0,0,4,0,0,0,0,9,0,0,0,0,0,4,0,0,0,0,6,7,2,1,0,0,0,1,7,0,8,0,0,6,0,0,0,0,0,0,0,3,0,0,7,0,9,8,0,0,0,9,8,2,3,0,0,0,0,4,0,0,0,0,0,4,0,0,0,0,5,0,0,6,0,0,8,0];
+	solution[10] = [8,6,1,7,3,2,5,4,9,7,2,5,9,4,1,6,3,8,4,9,3,5,8,6,7,2,1,2,4,9,1,7,3,8,5,6,6,1,8,4,2,5,9,7,3,5,3,7,6,9,8,4,1,2,9,8,2,3,5,7,1,6,4,3,7,6,8,1,4,2,9,5,1,5,4,2,6,9,3,8,7];
+	games[11] = [0,3,0,0,2,5,0,0,0,0,0,9,4,0,0,1,0,2,0,0,6,0,0,0,0,9,0,0,0,8,1,0,0,0,0,0,0,1,0,0,3,0,0,7,0,0,0,0,0,0,4,5,0,0,0,4,0,0,0,0,3,0,0,8,0,3,0,0,6,7,0,0,0,0,0,8,5,0,0,4,9];
+	solution[11] = [4,3,1,9,2,5,8,6,7,5,8,9,4,6,7,1,3,2,7,2,6,3,1,8,4,9,5,3,5,8,1,7,9,6,2,4,6,1,4,5,3,2,9,7,8,9,7,2,6,8,4,5,1,3,2,4,5,7,9,1,3,8,6,8,9,3,2,4,6,7,5,1,1,6,7,8,5,3,2,4,9];
+	games[12] = [3,1,8,0,0,4,0,5,0,0,0,0,0,3,0,2,0,0,0,0,7,0,0,0,0,0,9,0,0,6,4,2,0,0,9,0,0,0,0,0,0,0,0,0,0,0,5,0,0,8,3,7,0,0,5,0,0,0,0,0,8,0,0,0,0,4,0,6,0,0,0,0,0,2,0,3,0,0,1,6,5];
+	solution[12] = [3,1,8,2,9,4,6,5,7,6,9,5,7,3,1,2,8,4,2,4,7,8,5,6,3,1,9,8,3,6,4,2,7,5,9,1,9,7,2,6,1,5,4,3,8,4,5,1,9,8,3,7,2,6,5,6,3,1,7,9,8,4,2,1,8,4,5,6,2,9,7,3,7,2,9,3,4,8,1,6,5];
+	games[13] = [0,0,0,3,0,1,0,0,0,1,0,8,0,0,2,4,0,0,0,9,0,7,4,0,0,0,3,0,0,0,0,5,0,7,2,0,0,0,0,4,0,7,0,0,0,0,7,9,0,6,0,0,0,0,8,0,0,0,3,4,0,9,0,0,0,5,8,0,0,1,0,4,0,0,0,2,0,9,0,0,0];
+	solution[13] = [7,5,4,3,8,1,2,6,9,1,3,8,6,9,2,4,5,7,6,9,2,7,4,5,8,1,3,4,8,1,9,5,3,7,2,6,5,6,3,4,2,7,9,8,1,2,7,9,1,6,8,3,4,5,8,1,7,5,3,4,6,9,2,9,2,5,8,7,6,1,3,4,3,4,6,2,1,9,5,7,8];
+	games[14] = [1,4,0,3,0,0,0,0,0,0,0,2,0,0,0,0,1,0,0,3,9,0,0,4,0,0,8,4,0,0,9,0,5,0,0,0,0,2,0,4,0,3,0,5,0,0,0,0,6,0,7,0,0,9,7,0,0,5,0,0,2,3,0,0,9,0,0,0,0,8,0,0,0,0,0,0,0,6,0,9,7];
+	solution[14] = [1,4,8,3,5,2,9,7,6,5,7,2,8,6,9,4,1,3,6,3,9,1,7,4,5,2,8,4,6,3,9,1,5,7,8,2,9,2,7,4,8,3,6,5,1,8,5,1,6,2,7,3,4,9,7,1,6,5,9,8,2,3,4,2,9,4,7,3,1,8,6,5,3,8,5,2,4,6,1,9,7];
+	games[15] = [0,0,8,0,0,9,2,0,0,0,0,5,0,0,7,0,0,0,3,0,0,0,4,0,0,0,5,0,7,0,8,0,1,0,9,4,0,0,0,0,0,0,0,0,0,6,5,0,9,0,4,0,3,0,9,0,0,0,2,0,0,0,1,0,0,0,4,0,0,5,0,0,0,0,2,7,0,0,4,0,0];
+	solution[15] = [7,1,8,5,6,9,2,4,3,4,2,5,3,8,7,9,1,6,3,9,6,1,4,2,7,8,5,2,7,3,8,5,1,6,9,4,8,4,9,2,3,6,1,5,7,6,5,1,9,7,4,8,3,2,9,8,4,6,2,5,3,7,1,1,6,7,4,9,3,5,2,8,5,3,2,7,1,8,4,6,9];
+	games[16] = [0,8,2,5,0,0,0,0,0,0,0,0,9,0,0,0,0,0,4,0,3,0,1,0,0,0,6,5,0,0,0,9,0,3,1,0,0,0,4,3,8,1,6,0,0,0,6,1,0,5,0,0,0,9,1,0,0,0,2,0,4,0,7,0,0,0,0,0,7,0,0,0,0,0,0,0,0,5,2,6,0];
+	solution[16] = [9,8,2,5,7,6,1,4,3,6,1,7,9,4,3,5,8,2,4,5,3,2,1,8,7,9,6,5,7,8,6,9,2,3,1,4,2,9,4,3,8,1,6,7,5,3,6,1,7,5,4,8,2,9,1,3,6,8,2,9,4,5,7,8,2,5,4,6,7,9,3,1,7,4,9,1,3,5,2,6,8];
+	games[17] = [0,6,0,0,7,1,0,0,0,0,4,0,8,5,0,0,1,0,0,0,0,0,0,0,5,9,0,4,0,0,0,0,8,0,5,6,0,0,0,0,0,0,0,0,0,1,3,0,6,0,0,0,0,4,0,8,1,0,0,0,0,0,0,0,2,0,0,8,6,0,3,0,0,0,0,7,3,0,0,4,0];
+	solution[17] = [5,6,3,9,7,1,4,2,8,9,4,2,8,5,3,6,1,7,8,1,7,2,6,4,5,9,3,4,7,9,3,2,8,1,5,6,2,5,6,4,1,7,3,8,9,1,3,8,6,9,5,2,7,4,3,8,1,5,4,9,7,6,2,7,2,4,1,8,6,9,3,5,6,9,5,7,3,2,8,4,1];
+	games[18] = [0,0,3,0,0,0,9,8,0,7,0,0,0,0,6,0,1,0,0,0,6,0,9,2,0,0,3,0,2,0,0,0,3,0,0,7,0,0,0,6,0,7,0,0,0,6,0,0,9,0,0,0,3,0,8,0,0,5,7,0,2,0,0,0,6,0,2,0,0,0,0,1,0,4,2,0,0,0,8,0,0];
+	solution[18] = [2,1,3,7,4,5,9,8,6,7,5,9,8,3,6,4,1,2,4,8,6,1,9,2,7,5,3,1,2,8,4,5,3,6,9,7,3,9,4,6,1,7,5,2,8,6,7,5,9,2,8,1,3,4,8,3,1,5,7,4,2,6,9,5,6,7,2,8,9,3,4,1,9,4,2,3,6,1,8,7,5];
+	games[19] = [0,8,0,0,0,6,0,0,0,7,0,1,0,0,0,0,0,0,4,0,9,0,0,3,0,2,0,2,0,0,0,0,1,5,0,4,0,0,3,0,0,0,1,0,0,6,0,5,8,0,0,0,0,9,0,9,0,1,0,0,3,0,7,0,0,0,0,0,0,8,0,2,0,0,0,6,0,0,0,4,0];
+	solution[19] = [5,8,2,7,9,6,4,1,3,7,3,1,4,2,8,6,9,5,4,6,9,5,1,3,7,2,8,2,7,8,9,6,1,5,3,4,9,4,3,2,5,7,1,8,6,6,1,5,8,3,4,2,7,9,8,9,6,1,4,2,3,5,7,1,5,4,3,7,9,8,6,2,3,2,7,6,8,5,9,4,1];
+	games[20] = [0,4,7,0,0,2,0,1,0,8,0,5,0,0,3,7,0,0,0,0,0,8,0,0,0,0,0,1,0,4,0,0,0,0,0,8,0,3,0,0,9,0,0,6,0,5,0,0,0,0,0,4,0,2,0,0,0,0,0,7,0,0,0,0,0,1,3,0,0,6,0,9,0,2,0,4,0,0,3,8,0];
+	solution[20] = [3,4,7,9,6,2,8,1,5,8,9,5,1,4,3,7,2,6,6,1,2,8,7,5,9,4,3,1,7,4,2,3,6,5,9,8,2,3,8,5,9,4,1,6,7,5,6,9,7,8,1,4,3,2,9,8,3,6,1,7,2,5,4,4,5,1,3,2,8,6,7,9,7,2,6,4,5,9,3,8,1];
+	/* --Juego 23 o 24
 	games[1] = [];
 	solution[1] = [];
 	games[1] = [];
@@ -216,16 +218,17 @@ function loadGames()
 }
 
 
-function newGame()
+function newGame(reset)
 {
 	posBrick_x = 0;
 	posBrick_y = 0;
-	selectedGame = 0;
+	if(reset == 0)
+	{
+		selectedGame = getGame();
+	}
 	loadBrick();
 	loadGames();
-	loadValues(getGame());
-	//loadValues(selectedGame);
-	//loadValues2();
+	loadValues(selectedGame);
 }
 
 function winControl()
@@ -248,9 +251,18 @@ function winControl()
 	}
 	if(win == 1)
 	{
-		playedGames.push(selectedGame);
 		winGame();
 	}
+}
+
+function nextGame()
+{
+	if(playedGames.length == 19)
+	{
+		playedGames.length = 0;
+	}
+	playedGames.push(selectedGame);
+	newGame(0);
 }
 
 function winGame()
@@ -267,14 +279,16 @@ function winGame()
 
 $(document).ready(function (){
 
-	newGame();
-	var timer = $.timer(function (){
-		
-		//winControl();
-		
-	},20,true);
+	newGame(0);
 	
-
+	$('#btnNext').click(function (){
+		nextGame();
+	});
+	
+	$('#btnReset').click(function (){
+		newGame(1);
+	});
+	
 });
 </script>
 <body>
@@ -285,7 +299,10 @@ $(document).ready(function (){
 			<span id="playerLife"></span>
 		</div>
 		<div id="reset">
-			<input type="button" id="buttonReset" name="reset" value="Reset"/>
+			<input type="button" id="btnReset" name="reset" value="Reset"/>
+		</div>
+		<div id="next">
+			<input type="button" id="btnNext" name="siguiente" value="Siguiente"/>
 		</div>
 		<div id="computer">
 			<span id="computerText" align="center"></span>
